Added crash/fail harness